[project]
name = "c3py"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Shun Kashiwa", email = "shunthedev@gmail.com" }]
dependencies = ["graphviz>=0.20.1", "networkx[default]>=3.1", "pydot>=2.0.0"]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "c3py:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
    "pyinstrument>=4.6.2",
    "pytest-skip-slow>=0.0.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/c3py"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
